# rocket

bakusenkai/: Cargo.toml
bakusenkai/src/: main.rs
bakusenkai/static/: styles.css
bakusenkai/templates/: contact.hbs  index.hbs
experiment/: Cargo.toml
experiment/src/: main.rs
rocket-web/: Cargo.toml
rocket-web/src/: main.rs
rocket-web/templates/: home.hbs
